RESOLVED FIXED23334
Compile failure in XMLTokenizerLibxml2.cpp
https://bugs.webkit.org/show_bug.cgi?id=23334
Summary Compile failure in XMLTokenizerLibxml2.cpp
Brett Wilson (Google)
Reported 2009-01-14 15:53:58 PST
Revision 39909 introduced the use of the UNUSED_PARAM macro but didn't include <wtf/UnusedParam.h> This breaks the Chromium build. Not sure why this doesn't break on Mac.
Attachments
Mark Rowe (bdash)
Comment 1 2009-01-14 16:27:33 PST
Fixed with r39919.
Note You need to log in before you can comment on or make changes to this bug.