Fix https://bugs.webkit.org/show_bug.cgi?id=23334 Bug 23334: Compile failure in XMLTokenizerLibxml2.cpp

Include wtf/UnusedParam.h to get UNUSED_PARAM.

* dom/XMLTokenizerLibxml2.cpp:
(WebCore::hackAroundLibXMLEntityBug):

Canonical link: https://commits.webkit.org/32117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39919 268f45cc-cd09-0410-ab3c-d52691b4dbfc