WebCore/dom/XMLTokenizerLibxml2.cpp
@@ -55,6 +55,7 @@
 #include <wtf/Platform.h>
 #include <wtf/StringExtras.h>
 #include <wtf/Threading.h>
+#include <wtf/UnusedParam.h>
 #include <wtf/Vector.h>
 
 #if ENABLE(XSLT)
@@ -971,7 +972,7 @@ static inline bool hackAroundLibXMLEntityBug(void* closure)
 {
 #if LIBXML_VERSION >= 20627
     UNUSED_PARAM(closure);
-    
+
     // This bug has been fixed in libxml 2.6.27.
     return false;
 #else
